Bug 125367 - scrobble from fake queue fails if another player used since amarok last scrobbled
Summary: scrobble from fake queue fails if another player used since amarok last scrob...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-04-11 14:30 UTC by Shane King
Modified: 2006-06-11 12:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments
Only backdate as much as we need to (2.12 KB, patch)
2006-04-11 14:31 UTC, Shane King
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Shane King 2006-04-11 14:30:06 UTC
Version:           SVN (using KDE KDE 3.5.1)
Installed from:    Debian testing/unstable Packages
Compiler:          gcc (GCC) 4.0.3 (Debian 4.0.3-1) 
OS:                Linux

Since amaroK is set up to set the time for items in the m_fakeQueue list in the scrobbler code to the time amaroK last scrobbled, if another player has scrobbled since then the submit to last.fm is rejected by their spam filter (since the time of scrobble will be less than the last time last.fm has seen a scrobble from the user).
Comment 1 Shane King 2006-04-11 14:31:47 UTC
Created attachment 15562 [details]
Only backdate as much as we need to

If we only backdate the submission to the length of the fake submit queue
instead of the last amaroK submit, we can neatly slot it all in, and should be
able to avoid clobbering any scrobbles from other players (providing, of
course, the user only ever listens to one player at a time, but that's always
an assumption you have to make).
Comment 2 Shane King 2006-04-20 13:38:10 UTC
Patch applied in svn.

SVN commit 531823 by shakes:

Reworking of the audioscrobbler submit code:

* Tracks from a media device scan be submitted to last.fm immediately, without waiting for tracks to be played in amaroK. Thanks to Iain Benson for the patch.
* Submissions now automatically retry on failure (with incremental backoff) without the user needing to play a new track. Additionally, if there's more than 10 items in the queue, an additional submit is scheduled after the INTERVAL given by last.fm.
* When calculating play times for media devices, they are only backdated as much as they need to be to submit, to reduce the number of overlapping play time conflicts with other programs that might have submitted data to last.fm.