Reworking of the audioscrobbler submit code:

* Tracks from a media device scan be submitted to last.fm immediately, without waiting for tracks to be played in amaroK. Thanks to Iain Benson for the patch.
* Submissions now automatically retry on failure (with incremental backoff) without the user needing to play a new track. Additionally, if there's more than 10 items in the queue, an additional submit is scheduled after the INTERVAL given by last.fm.
* When calculating play times for media devices, they are only backdated as much as they need to be to submit, to reduce the number of overlapping play time conflicts with other programs that might have submitted data to last.fm.

BUG: 125367
BUG: 125690

svn path=/trunk/extragear/multimedia/amarok/; revision=531823