src/mediabrowser.cpp
@@ -2156,6 +2156,7 @@ MediaDevice::connectDevice( bool silent )
     if( m_syncStats )
     {
         syncStatsFromDevice( 0 );
+        Scrobbler::instance()->m_submitter->syncComplete();
     }
 
     // delete podcasts already played
